# cpp_modern_development_white_belt

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt
src/week_1/a_and_b/: main.cpp
src/week_1/calc_price/: main.cpp
src/week_1/dec2bin/: main.cpp
src/week_1/division/: main.cpp
src/week_1/equations/: main.cpp
src/week_1/even_numbers/: main.cpp
src/week_1/gcd/: main.cpp
src/week_1/min_string/: main.cpp
src/week_2/: CMakeLists.txt
src/week_2/anagrams/: README.md
src/week_2/bus_numbers/: CMakeLists.txt  main.cpp
src/week_2/buses/: CMakeLists.txt  main.cpp
src/week_2/concerns/: CMakeLists.txt  main.cpp
src/week_2/countries/: README.md
src/week_2/line/: line.cpp
src/week_2/synonyms/: CMakeLists.txt  main.cpp
src/week_2/temperature/: temperature.cpp
src/week_2/unique_bus_numbers/: CMakeLists.txt  main.cpp
src/week_2/update_if_greater/: README.md
src/week_3/lexicographical_sort/: main.cpp
src/week_3/modulo_sort/: main.cpp
src/week_3/names/: CMakeLists.txt  main.cpp  person.cpp
src/week_4/: CMakeLists.txt
src/week_4/ensure_equal/: ensure_equal.cpp
src/week_4/files/: CMakeLists.txt  first.cpp  second.cpp
src/week_4/inertible_function/: invertible_function.cpp
src/week_4/invertible_function/: CMakeLists.txt  Makefile  invertible_function.cpp  main.cpp
src/week_4/lecture_title/: title.cpp
src/week_4/precision_output/: main.cpp
src/week_4/rational/: CMakeLists.txt  first.cpp  io.cpp  map.cpp  mult_div.cpp  rational_eq_and_sub.cpp  throw.cpp
src/week_4/rational_calc/: CMakeLists.txt  main.cpp
(+29 files in other folders)
