project(rational LANGUAGES CXX)

add_executable(${PROJECT_NAME}_eq_and_sub rational_eq_and_sub.cpp)
add_executable(${PROJECT_NAME}_first first.cpp)
add_executable(${PROJECT_NAME}_io io.cpp)
add_executable(${PROJECT_NAME}_map map.cpp)
add_executable(${PROJECT_NAME}_mult_div mult_div.cpp)
add_executable(${PROJECT_NAME}_throw throw.cpp)
